# FreeRTOS-TinyUSB-RP2040

./: .gitmodules  CMakeLists.txt  README.md
src/: FreeRTOSConfig.h  freertos_hook.c  main.c  main_blinky.c  tusb_config.h  usb_descriptors.c
